<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">

    <TextView
        android:id="@+id/main_title"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:text="New Player Creation"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="?android:attr/textColorLink"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/firstName"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <EditText
        android:id="@+id/firstName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:ems="10"
        android:hint="@string/first_name"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/lastName"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1" />

    <EditText
        android:id="@+id/lastName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="92dp"
        android:ems="10"
        android:hint="@string/last_name"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/email"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <EditText
        android:id="@+id/email"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:layout_marginTop="43dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintLeft_toLeftOf="@+id/firstName"
        app:layout_constraintRight_toRightOf="@+id/firstName"
        app:layout_constraintTop_toBottomOf="@+id/firstName"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <EditText
        android:id="@+id/wordScrambleUID"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:layout_marginTop="-22dp"
        android:ems="10"
        android:hint="@string/desired_username"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/desired_username_footnote"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/email"
        app:layout_constraintRight_toRightOf="@+id/email"
        app:layout_constraintTop_toBottomOf="@+id/email"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />


    <TextView
        android:id="@+id/desired_username_footnote"
        android:layout_width="247dp"
        android:layout_height="68dp"
        android:layout_marginBottom="0dp"
        android:text="@string/desired_username_footnote"
        android:textAlignment="center"
        android:textColor="?android:attr/editTextColor"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/addPlayer"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/addPlayer"
        android:layout_width="250dp"
        android:layout_height="63dp"
        android:layout_marginBottom="133dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@color/colorButton"
        android:text="@string/submit"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_conversion_absoluteHeight="63dp"
        tools:layout_conversion_absoluteWidth="250dp"
        tools:layout_conversion_absoluteX="461dp"
        tools:layout_conversion_absoluteY="72dp" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline7"
        app:layout_constraintGuide_begin="20dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="20dp" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline8"
        app:layout_constraintGuide_begin="20dp"
        android:orientation="horizontal"
        tools:layout_editor_absoluteY="20dp"
        tools:layout_editor_absoluteX="0dp" />


</android.support.constraint.ConstraintLayout>