<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageButton
        android:id="@+id/viewPlayerStatistics"
        android:layout_width="0dp"
        android:layout_height="148dp"
        android:layout_marginBottom="71dp"
        android:scaleType="fitCenter"
        android:tint="@color/colorAnalogous1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/solveWordScrambles"
        app:layout_constraintRight_toRightOf="@+id/solveWordScrambles"
        app:srcCompat="@android:drawable/ic_menu_info_details"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1" />

    <ImageButton
        android:id="@+id/solveWordScrambles"
        android:layout_width="0dp"
        android:layout_height="148dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="31dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="16dp"
        android:scaleType="fitCenter"
        android:tint="@color/colorAccent"
        app:layout_constraintBottom_toTopOf="@+id/viewPlayerStatistics"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/createWordScramble"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.724"
        app:srcCompat="@android:drawable/ic_menu_edit"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1" />

    <ImageButton
        android:id="@+id/viewWordScrambleStatistics"
        android:layout_width="148dp"
        android:layout_height="148dp"
        android:layout_marginBottom="71dp"
        android:layout_marginEnd="28dp"
        android:scaleType="fitCenter"
        android:tint="@color/colorTriadic1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:srcCompat="@android:drawable/ic_menu_zoom" />

    <ImageButton
        android:id="@+id/createWordScramble"
        android:layout_width="148dp"
        android:layout_height="148dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="29dp"
        android:layout_marginRight="29dp"
        android:layout_marginTop="16dp"
        android:scaleType="fitCenter"
        android:tint="@color/colorTriadic2"
        app:layout_constraintBottom_toTopOf="@+id/viewWordScrambleStatistics"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.732"
        app:srcCompat="@android:drawable/ic_input_add" />

    <TextView
        android:id="@+id/create_word_scramble"
        android:layout_width="128dp"
        android:layout_height="41dp"
        android:text="@string/create_word_scramble"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Button"
        android:textColor="?attr/actionMenuTextColor"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintLeft_toLeftOf="@+id/createWordScramble"
        app:layout_constraintRight_toRightOf="@+id/createWordScramble"
        app:layout_constraintTop_toBottomOf="@+id/createWordScramble"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <TextView
        android:id="@+id/view_player_statistics"
        android:layout_width="128dp"
        android:layout_height="41dp"
        android:layout_marginEnd="2dp"
        android:layout_marginStart="2dp"
        android:text="@string/view_player_statistics"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Button"
        android:textColor="?attr/actionMenuTextColor"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/solve_word_scramble"
        app:layout_constraintRight_toRightOf="@+id/solve_word_scramble"
        app:layout_constraintTop_toBottomOf="@+id/viewPlayerStatistics"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <TextView
        android:id="@+id/view_word_scramble_statistics"
        android:layout_width="128dp"
        android:layout_height="51dp"
        android:layout_marginEnd="21dp"
        android:layout_marginStart="21dp"
        android:text="@string/view_word_scramble_statistics"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Button"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="@+id/create_word_scramble"
        app:layout_constraintRight_toRightOf="@+id/create_word_scramble"
        app:layout_constraintTop_toBottomOf="@+id/viewWordScrambleStatistics"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <TextView
        android:id="@+id/solve_word_scramble"
        android:layout_width="128dp"
        android:layout_height="41dp"
        android:layout_marginEnd="17dp"
        android:layout_marginStart="17dp"
        android:text="@string/solve_word_scrambles"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="?attr/actionMenuTextColor"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.564"
        app:layout_constraintLeft_toLeftOf="@+id/viewPlayerStatistics"
        app:layout_constraintRight_toRightOf="@+id/viewPlayerStatistics"
        app:layout_constraintTop_toBottomOf="@+id/solveWordScrambles"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <TextView
        android:id="@+id/wordScrambleUID"
        android:layout_width="0dp"
        android:layout_height="65dp"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="12dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="16dp"
        android:text="@android:string/unknownName"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textColor="@color/colorAccent"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/solveWordScrambles"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

</android.support.constraint.ConstraintLayout>
